tests/ui/coroutine/coroutine-region-requirements.stderr
error: lifetime may not live long enough
  --> $DIR/coroutine-region-requirements.rs:12:51
   |
LL | fn dangle(x: &mut i32) -> &'static mut i32 {
   |              - let's call the lifetime of this reference `'1`
...
LL |             CoroutineState::Complete(c) => return c,
   |                                                   ^ returning this value requires that `'1` must outlive `'static`

error: aborting due to 1 previous error

